Bug 421180: When removing bookmarks existing keywords aren't deleted/removed, patch by Marco Bonardo <mak77@supereva.it>, r=dietrich, a=damon